--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=teamreviewer
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:g1+2UEroedD/k68wbnLGH1bEaTMsHD/w9jtrZJJWOsU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
