Bootstrap and Auth added by Rcc

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=teamreviewer
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:7yE+17U6bM47kRw/w889NeYH1HQ3V6cYNKFijIEpXQQ=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
