--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=teamreviewer
+APP_NAME=TeamReviewer
 APP_ENV=local
 APP_KEY=base64:g1+2UEroedD/k68wbnLGH1bEaTMsHD/w9jtrZJJWOsU=
 APP_DEBUG=true
