--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
-        "openai-php/client": "^0.10.3"
+        "openai-php/client": "^0.10.3",
+        "spatie/laravel-permission": "^6.13"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
